--- a/src/app/contato/contato.component.css
+++ b/src/app/contato/contato.component.css
@@ -1,3 +1,16 @@
 .full-width{
     width: 100%;
 }
+
+.half-width{
+    width: 50%;
+}
+
+.border-radius-100 {
+    border-radius: 100%;
+}
+
+
+.file-input {
+    display: none;
+  }
