--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -2,32 +2,125 @@
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
     </button>
-    <span>Contatos</span>
+    <mat-icon>account_circle</mat-icon> 
     <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon people-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon>people</mat-icon>
-    </button>
+    <span>&nbsp;Contatos</span>
   </mat-toolbar>
-  <form [formGroup]="formulario" (ngSubmit)="submit()">
+  <mat-tab-group>
+    <mat-tab >
+      <ng-template mat-tab-label="">
+          <mat-icon>list</mat-icon> 
+          Todos
+      </ng-template>
+      <mat-card>
+        <mat-card-content>
+          
+          <table mat-table [dataSource]="contatos" class="mat-elevation-z8 full-width">
 
-    <mat-form-field class="full-width">
-        <mat-label>Nome</mat-label>
-        <input type="text"
-               formControlName="nome" 
-               matInput 
-               placeholder="Ex.: Fulado de Tal">
-               <mat-error *ngIf="formulario.controls['nome'].invalid">Campo nome é obrigatório.</mat-error>
-    </mat-form-field>
- 
-    <mat-form-field class="full-width">
-        <mat-label>E-mail</mat-label>
-        <input type="email"
-               formControlName="email" 
-               matInput 
-               placeholder="Ex.: nome@email.com">
-               <mat-error *ngIf="formulario.controls['email'].invalid && formulario.controls['email'].hasError('required')">Campo email é obrigatório.</mat-error>
-               <mat-error *ngIf="formulario.controls['email'].invalid && !formulario.controls['email'].hasError('required')">Informe um E-Mail válido.</mat-error>
-    </mat-form-field>
-    <button [disabled]="!formulario.valid" mat-raised-button color="primary" >Adicionar</button>
+            <ng-container matColumnDef="foto">
+              <th mat-header-cell *matHeaderCellDef></th>
+              <td mat-cell *matCellDef="let contato">
+                <div *ngIf="contato.foto">
+                    <img 
+                        width="70px" (click)="visualizarContato(contato)"
+                        src="data:image/jpg;base64,{{ contato.foto }}" 
+                        class="border-radius-100"/>
+                </div>
+                <div *ngIf="!contato.foto">
+                  <input type="file" name="foto" (change)="uploadFoto($event, contato)" class="file-input" #fildUploadFoto/>
+                  <div class="file-upload">
+                    <button mat-mini-fab color="primary" class="upload-btn"
+                       (click)="fildUploadFoto.click()">
+                         <mat-icon>photo_camera</mat-icon>
+                     </button>
+                    {{ fotoName || " Selecione uma foto... " }}
+                 
+                     
+                 </div>
+                </div>                
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef>ID</th>
+                <td mat-cell *matCellDef="let contato">{{ contato.id }}</td>
+            </ng-container>
+
+              <ng-container matColumnDef="nome">
+                <th mat-header-cell *matHeaderCellDef>Nome</th>
+                <td mat-cell *matCellDef="let contato">{{ contato.nome }}</td>
+              </ng-container>
+
+              <ng-container matColumnDef="email">
+                <th mat-header-cell *matHeaderCellDef>E-mail</th>
+                <td mat-cell *matCellDef="let contato">{{ contato.email }}</td>
+              </ng-container>
+
+              <ng-container matColumnDef="favorito">
+                <th mat-header-cell *matHeaderCellDef>Favorito</th>
+                <td mat-cell *matCellDef="let contato">
+                  <a href="#" (click)="favoritar(contato)">
+                    <mat-icon color="primary">
+                      {{ contato.favorito ? 'favorite' : 'favorite_border' }}
+                    </mat-icon>
+                  </a>
+                </td>
+              </ng-container>
+
+              <tr mat-header-row *matHeaderRowDef="colunas"></tr>
+              <tr mat-row *matRowDef="let row; columns: colunas;"></tr>
+            </table>
+            <mat-paginator 
+                  [length]="totalElementos"
+                  [pageSize]="pagSize"
+                  [pageSizeOptions]="pageSizeOption"
+                  (page)="paginar($event)">
+
+            </mat-paginator>
+        </mat-card-content>
+      </mat-card>
+    </mat-tab>
+    <mat-tab>
+      <ng-template mat-tab-label="">
+        <mat-icon>face</mat-icon> 
+        Novo
+      </ng-template>
+      <mat-card class="half-width">
+          <mat-card-content>
+            <mat-card-title>Novo Contato</mat-card-title>
+            <form [formGroup]="formulario" (ngSubmit)="submit()">
+
+              <mat-form-field class="full-width">
+                  <mat-label>Nome</mat-label>
+                  <input type="text"
+                        formControlName="nome" 
+                        matInput 
+                        placeholder="Ex.: Fulado de Tal">
+                        <mat-error *ngIf="formulario.controls['nome'].invalid
+                                      && !formulario.controls['nome'].pristine">Campo nome é obrigatório.</mat-error>
+              </mat-form-field>
+          
+              <mat-form-field class="full-width">
+                  <mat-label>E-mail</mat-label>
+                  <input type="email"
+                        formControlName="email" 
+                        matInput 
+                        placeholder="Ex.: nome@email.com">
+                        <mat-error 
+                            *ngIf="formulario.controls['email'].invalid 
+                                && formulario.controls['email'].hasError('required')
+                                && !formulario.controls['email'].pristine">Campo email é obrigatório.</mat-error>
+                        <mat-error *ngIf="formulario.controls['email'].invalid 
+                                      && !formulario.controls['email'].hasError('required')
+                                      && !formulario.controls['email'].pristine">Informe um E-Mail válido.</mat-error>
+              </mat-form-field>
+              <button [disabled]="!formulario.valid" mat-raised-button color="primary" >Adicionar</button>
+            
+            </form>
+        </mat-card-content>
+      </mat-card>
+    </mat-tab>
+  </mat-tab-group>
+
+
   
-  </form>
